--- a/files/style.css
+++ b/files/style.css
@@ -4,7 +4,7 @@
 /* adding variables so I don't have to memorize hex codes and other formatting */
 :root{
     --main-color: #4b8864;
-    --bg: #c6cdc6;
+    --bg: #ededed;
     --light-color: #aae1c1;
     --black: #444;
 }
@@ -115,4 +115,20 @@ main{
 footer{
     background: var(--black);
     color: white;
+    text-align: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 10px;
+}
+
+footer .links{
+    margin: 50px 0px 30px;
+}
+footer .links a{
+    margin: 24px;
+}
+
+footer .links a:hover{
+    color: var(--light-color);
 }
