--- a/files/style.css
+++ b/files/style.css
@@ -129,7 +129,7 @@ h1{
     color: var(--main-color)
 }
 aside{
-    width: 20%;
+    width: 25%;
     float: right;
     padding: 20px;
     margin: 30px;
@@ -189,6 +189,17 @@ footer .links a{
     margin: 24px;
 }
 
+#contactlist{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#contactlist label{
+    margin: 10px;
+}
+
+
 input{
     border: var(--border);
     border-radius: 10px;
@@ -203,4 +214,21 @@ textarea{
     border-radius: 10px;
     resize: both;
     overflow: auto;
+}
+
+@media (max-width:650px) {
+    input{
+        width: 40%;
+    }
+    aside{
+        float:none;
+        width: inherit;
+    }
+    footer .links{
+        display: flex;
+        flex-direction: column;
+    }
+    #contactlist label{
+        margin: 2px;
+    }
 }
